--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.13",
+    "@tremor/react": "^3.18.7",
     "autoprefixer": "^10.4.21",
     "axios": "^1.12.2",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.3",
+    "react-youtube": "^10.1.0",
+    "recharts": "^3.2.1",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
