--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.3",
     "mongoose": "^8.18.3",
-    "openai": "^6.0.1"
+    "openai": "^6.0.1",
+    "stripe": "^19.1.0"
   }
 }
