--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,9 @@
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-paginate": "^8.3.0",
     "react-router-dom": "^7.9.3",
+    "react-toastify": "^11.0.5",
     "react-youtube": "^10.1.0",
     "recharts": "^3.2.1",
     "tailwindcss": "^4.1.13"
