--- a/render.yaml
+++ b/render.yaml
@@ -5,8 +5,8 @@ services:
     rootDir: backend
     region: frankfurt
     plan: free
-    buildCommand: cd backend && npm install
-    startCommand: cd backend && npm start
+    buildCommand: npm install
+    startCommand: npm start
     envVars:
       - key: NODE_ENV
         value: production
